@@ -15,9 +15,7 @@
  */
 package com.google.auto.common;
 
-import com.google.common.base.Preconditions;
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableSet;
+import com.google.auto.common.base.Preconditions;
 
 import javax.lang.model.element.Element;
 import javax.lang.model.element.ElementKind;
@@ -41,6 +39,7 @@ import javax.lang.model.type.WildcardType;
 import javax.lang.model.util.Elements;
 import javax.lang.model.util.SimpleTypeVisitor8;
 import javax.lang.model.util.Types;
+import java.util.ArrayList;
 import java.util.HashSet;
 import java.util.Iterator;
 import java.util.List;
@@ -67,12 +66,12 @@ public final class MoreTypes {
 
         @Override
         protected boolean doEquivalent(TypeMirror a, TypeMirror b) {
-            return MoreTypes.equal(a, b, ImmutableSet.<ComparedElements>of());
+            return MoreTypes.equal(a, b, Set.of());
         }
 
         @Override
         protected int doHash(TypeMirror t) {
-            return MoreTypes.hash(t, ImmutableSet.<Element>of());
+            return MoreTypes.hash(t, Set.of());
         }
 
         @Override
@@ -123,15 +122,15 @@ public final class MoreTypes {
 
     private static class ComparedElements {
         final Element a;
-        final ImmutableList<TypeMirror> aArguments;
+        final List<TypeMirror> aArguments;
         final Element b;
-        final ImmutableList<TypeMirror> bArguments;
+        final List<TypeMirror> bArguments;
 
         ComparedElements(
                 Element a,
-                ImmutableList<TypeMirror> aArguments,
+                List<TypeMirror> aArguments,
                 Element b,
-                ImmutableList<TypeMirror> bArguments) {
+                List<TypeMirror> bArguments) {
             this.a = a;
             this.aArguments = aArguments;
             this.b = b;
@@ -275,7 +274,7 @@ public final class MoreTypes {
 
         private Set<ComparedElements> visitingSetPlus(
                 Set<ComparedElements> visiting, Element a, Element b) {
-            ImmutableList<TypeMirror> noArguments = ImmutableList.of();
+            List<TypeMirror> noArguments = List.of();
             return visitingSetPlus(visiting, a, noArguments, b, noArguments);
         }
 
@@ -285,11 +284,12 @@ public final class MoreTypes {
                 List<? extends TypeMirror> aArguments,
                 Element b,
                 List<? extends TypeMirror> bArguments) {
+            // TODO are these copies necessary?
             ComparedElements comparedElements =
                     new ComparedElements(
-                            a, ImmutableList.<TypeMirror>copyOf(aArguments),
-                            b, ImmutableList.<TypeMirror>copyOf(bArguments));
-            Set<ComparedElements> newVisiting = new HashSet<ComparedElements>(visiting);
+                            a, new ArrayList<>(aArguments),
+                            b, new ArrayList<>(bArguments));
+            Set<ComparedElements> newVisiting = new HashSet<>(visiting);
             newVisiting.add(comparedElements);
             return newVisiting;
         }
@@ -461,25 +461,25 @@ public final class MoreTypes {
      * Returns the set of {@linkplain TypeElement types} that are referenced by the given {@link
      * TypeMirror}.
      */
-    public static ImmutableSet<TypeElement> referencedTypes(TypeMirror type) {
+    public static Set<TypeElement> referencedTypes(TypeMirror type) {
         requireNonNull(type);
-        ImmutableSet.Builder<TypeElement> elements = ImmutableSet.builder();
+        Set<TypeElement> elements = new HashSet<>();
         type.accept(ReferencedTypes.INSTANCE, elements);
-        return elements.build();
+        return elements;
     }
 
     private static final class ReferencedTypes
-            extends SimpleTypeVisitor8<Void, ImmutableSet.Builder<TypeElement>> {
+            extends SimpleTypeVisitor8<Void, Set<TypeElement>> {
         private static final ReferencedTypes INSTANCE = new ReferencedTypes();
 
         @Override
-        public Void visitArray(ArrayType t, ImmutableSet.Builder<TypeElement> p) {
+        public Void visitArray(ArrayType t, Set<TypeElement> p) {
             t.getComponentType().accept(this, p);
             return null;
         }
 
         @Override
-        public Void visitDeclared(DeclaredType t, ImmutableSet.Builder<TypeElement> p) {
+        public Void visitDeclared(DeclaredType t, Set<TypeElement> p) {
             p.add(MoreElements.asType(t.asElement()));
             for (TypeMirror typeArgument : t.getTypeArguments()) {
                 typeArgument.accept(this, p);
@@ -488,14 +488,14 @@ public final class MoreTypes {
         }
 
         @Override
-        public Void visitTypeVariable(TypeVariable t, ImmutableSet.Builder<TypeElement> p) {
+        public Void visitTypeVariable(TypeVariable t, Set<TypeElement> p) {
             t.getLowerBound().accept(this, p);
             t.getUpperBound().accept(this, p);
             return null;
         }
 
         @Override
-        public Void visitWildcard(WildcardType t, ImmutableSet.Builder<TypeElement> p) {
+        public Void visitWildcard(WildcardType t, Set<TypeElement> p) {
             TypeMirror extendsBound = t.getExtendsBound();
             if (extendsBound != null) {
                 extendsBound.accept(this, p);
@@ -552,13 +552,13 @@ public final class MoreTypes {
         return MoreElements.asType(asElement(mirror));
     }
 
-    public static ImmutableSet<TypeElement> asTypeElements(Iterable<? extends TypeMirror> mirrors) {
+    public static Set<TypeElement> asTypeElements(Iterable<? extends TypeMirror> mirrors) {
         requireNonNull(mirrors);
-        ImmutableSet.Builder<TypeElement> builder = ImmutableSet.builder();
+        Set<TypeElement> builder = new HashSet<>();
         for (TypeMirror mirror : mirrors) {
             builder.add(asTypeElement(mirror));
         }
-        return builder.build();
+        return builder;
     }
 
     /**
